Fix blog page margins on mobile Fix image icons sizing on mobile

--- a/siteMdFiles/docs/stylesheets/style.css
+++ b/siteMdFiles/docs/stylesheets/style.css
@@ -16,12 +16,12 @@ this is useful for things like not animating the search icon, which is technical
 #imgIcon{
   padding-left: 1.5%;
   padding-right: 1.5%;
-  width: 6.5%;
+  width: 3.5rem;
   transition: width 0.5s;
 }
 
 #imgIcon:hover{
-  width: 8%;
+  width: 4rem;
 }
 
 /*Round all of the corners for all images*/
